<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="insurance.abhi.abhiinsuranceapp.NewEntryActivity"
    tools:showIn="@layout/activity_new_entry">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
    >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dateEditText"
                android:inputType="date"
                android:hint="@string/date_placeholder"
            />
        </android.support.design.widget.TextInputLayout>
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CHANGE"
                android:id="@+id/changeDateButton"
                android:layout_marginTop="10dp"
        />
    </LinearLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/partyNameEditText"
            android:hint="@string/name_placeholder"
            >
            <requestFocus />
            </EditText>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount_placeholder"
                android:id="@+id/amountEditText"
                android:inputType="number"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="5dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/interest_placeholder"
                android:id="@+id/interestEditText"
                android:inputType="numberDecimal"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/time_placeholder"
                android:inputType="number"
                android:id="@+id/monthEditText"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        >
    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/calculate"
        android:padding="10dp"
        android:textSize="19sp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:id="@+id/calculateButton"
        />
    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="Add"
        android:padding="10dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:textSize="19sp"
        android:id="@+id/addButton"
        />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/interestAmountLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/totalAmountLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>
